--- a/package.json
+++ b/package.json
@@ -3,6 +3,16 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "jest": {
+    "collectCoverage": true,
+    "reporters": [
+      "default",
+      ["jest-html-reporters", {
+        "publicPath": "./tests/service/html-report",
+        "filename": "report.html"
+      }]
+    ]
+  },
   "scripts": {
     "start": "node index.js",
     "lint": "eslint . --ext .js",
@@ -26,6 +36,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.5.0",
+    "jest-html-reporters": "^3.1.4",
     "mongoose": "^7.0.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.2.3"
