--- a/jenkis-israel/Jenkinsfile
+++ b/jenkis-israel/Jenkinsfile
@@ -81,7 +81,10 @@ pipeline {
         always{
             sh 'docker image prune -a -f'
             sh 'docker system prune -a -f'
-            emailext (attachLog: true, body: 'test', subject: 'test', to: 'izg.elt@gmail.com')
+            emailext(attachLog: true, body: '''CI was finished with the following details:
+            Status:  ${currentBuild.result}
+            Console log is attached in this email.
+            Beast regards!''', subject: 'Jenkis result ${BRANCH_NAME} branch', to: 'izg.elt@gmail.com')
         }
     }
 
